tapestry.css
body {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

#header {
    position: fixed;
    top: 1em;
    left: 1em;
}

#header h1 {
    background: url(./logo.png);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: top left;
    min-height: 100px;
    direction: rtl;
    text-indent: -9999em;
    min-width: 150px;
    float: left;
    margin: 0;
}

#header h2 {
    color: #6e8795;
    vertical-align: middle;
    display: inline-block;
    padding-left: 33px;
    padding-top: 33px;
    margin: 0;
}
#header div, p {
    vertical-align: middle;
    padding-left: 50px;
    display: inline-block;
}

@media (max-width: 670px) {
  #header h2 {
      font-size: 1.1em;
      padding-top: 38px;
      padding-left: 1em;
  }
}

@media (max-width: 400px) {
  #header h1 {
      min-width: 120px;
  }
  #header h2 {
    font-size: 0.8em;
  }
}

#tapestry {
    margin-top: 100px;
}

#tapestry-svg > g {
    transform: translate(-8.5px, 0);
}

/* Tapestry Controls */

#tapestry-controls-wrapper {
    margin: -30px 10% 20px;
    padding: 10px 20px;
    float: right;
    width: auto;
    background: #EEE;
    box-shadow: 0 0 7px 0 #BBB;
}
#tapestry-controls-wrapper > * {
    float: left;
    padding-right: 20px;
}

/* depth slider */

#tapestry-depth-slider {
    margin-top: 6px;
    outline: none;
    background: #d3d3d3;
    height: 10px;
    opacity: 0.7;
    transition: opacity .2s;
}

#tapestry-depth-slider {
    -webkit-appearance: none;
}

/* webkit support */
#tapestry-depth-slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    border: none;
    appearance: none;
    width: 20px;
    height: 20px;
    border-radius: 50%; 
    background: #ed7565;
    cursor: pointer;
}

/* mozilla support */
#tapestry-depth-slider::-moz-range-thumb {
    border: none;
    width: 20px;
    height: 20px;
    border-radius: 50%; 
    background: #ed7565;
}

/* internet explorer support */
#tapestry-depth-slider::-ms-thumb {
    border: none;
    width: 20px;
    height: 20px;
    border-radius: 50%; 
    background: #ed7565;
}

#tapestry-depth-slider:hover {
    opacity: 1
}

#footer {
    width: 100%;
    font-size: 0.7em;
    color: #666;
    text-align:center;
}

div.modal {
    top: 80px;
}

#spotlight-content {
    position: absolute;
    top: 5vh;
    left: 5vw;
    height: 90vh;
    width: 90vw;
    z-index: 100;
    background-position: 0 0;
    background-size: cover;
    opacity: 1;
    transition: all 1s;
    transition-timing-function: ease-in;
    border: solid 1px #999;
    border-radius: 40px;
    overflow: hidden;
}
#spotlight-content > * {
    background: #000;
    outline: none;
}
#spotlight-content[data-media-format=mp4] > * {
    width: 100%;
    height: auto;
}

#spotlight-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.progress-meter .background {
    fill: #333333;
}

.progress-meter .foreground {
    fill: #11a6d8;
}

.title {
    font-size: 20px;
    text-shadow: 1.5px 1.5px #333333;
}

.imageOverlay {
    opacity: 0.5;
    transition: 0.2s all;
}

.node .expandGrandchildren {
    fill: #999;
}

.node:hover .expandGrandchildren {
    transform: scale(1.2);
    transition: 0.2s all;
}

.node:hover .imageOverlay {
    opacity: 0;
}

text {
    transition: 0.2s all;
}

.node:hover text {
    display: none;
}

.links line {
    stroke-opacity: 5;
}

/* MEDIA BUTTON */

.mediaButton {
    transition: all 0.25s ease;
    cursor: pointer;
    color: #666666;
    overflow: hidden;
    border-radius: 100%;
}

.mediaButton:hover,
.mediaButton:active {
    transform: scale(1.15) translate(0, 21px);
    color: #11a6d8;
}

.mediaButton > i:not(.mediaButtonLoading) {
    font-size: 55px;
    background: #fff;
    border: solid 1px #fff;
    padding: 2px;
}

.mediaButtonLoading {
    color: transparent;
    background-image: url(https://beta.tapestry-tool.com/wp-content/uploads/2018/11/loading-eclipse.svg);
    background-color: #666;
    border-radius: 100%;
    margin: 2% 2% 2% 3%;
    width: 94%;
    height: 94%;
    background-size: 98%;
    box-shadow: 0 0 0 2px #666 inset;
}

/* ADD NODE BUTTON */
.addNodeButton {
    transition: all 0.25s ease;
    cursor: pointer;
    color: #666666;
    overflow: hidden;
    border-radius: 100%;
}

.addNodeButton:hover,
.addNodeButton:active {
    transform: scale(1.15) translate(0, -21px);
    color: #11a6d8;
}

.addNodeButton > i:not(.mediaButtonLoading) {
    font-size: 55px;
    background: #fff;
    border: solid 1px #fff;
    padding: 2px;
}

i {
    background-color: white;
    border-radius: 100%;
}

.lightbox {
    background-color: rgba(0, 0, 0, 0.8);
    overflow: scroll;
    position: fixed;
    display: none;
    opacity: 0;
    z-index: 1;
    bottom: 0;
    right: 0;
    left: 0;
    top: 0;
    transition: all 1s !important;
}

.lightbox-container {
    position: relative;
    max-width: 960px;
    margin: 7% auto;
    display: block;
    height: auto;
    z-index: 10;
}

@media screen and (max-width: 768px) {
    .lightbox-container {
        margin-top: 10%;
    }
}

@media screen and (max-width: 414px) {
    .lightbox-container {
        -webkit-backface-visibility: hidden;
        margin-top: 13%;
    }
}

.lightbox-content {
    -webkit-backface-visibility: hidden;
    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.7);
}

.lightbox-close {
    text-transform: uppercase;
    background: none;
    position: absolute;
    font-weight: 300;
    font-size: 12px;
    display: block;
    border: none;
    color: white;
    top: -22px;
    right: 0.5%;
    text-align: right;
    box-shadow: none;
}

#instructions-wrapper {
    max-width: 430px;
    border: solid 1px #CCC;
    padding: 10px;
    border-radius: 5px;
    box-shadow: 0 0 8px;
    text-align:center; 
    color: #666; 
    margin: 0 auto 1em; 
    float: none;
    font-size: 0.8em;
}

@media (min-width:800px) {
    #instructions-wrapper {
        max-width: 230px;
        position: absolute;
        top: 45px;
        right: 10px;
    }
}

@media (min-width:1000px) {
    #instructions-wrapper {
        max-width: 430px;
        right: 45px;
    }
}

/* Add new node form */

body {font-family: Arial, Helvetica, sans-serif;}
* {box-sizing: border-box;}

/* The popup form - hidden by default */
.form-popup {
    display: none;
    position: fixed;
    bottom: 0;
    right: 15px;
    border: 3px solid #f1f1f1;
    z-index: 9;
}

/* Add styles to the form container */
.form-container {
    padding: 6%;
    background-color: white;
    margin: 0 auto;
}

/* Full-width input fields */
.form-container input[type=text], .form-container input[type=url] {
    width: 100%;
    padding: 15px;
    margin: 5px 0 22px 0;
    border: none;
    background: #f1f1f1;
}

/* When the inputs get focus, do something */
.form-container input[type=text]:focus, .form-container input[type=password]:focus {
    background-color: #ddd;
    outline: none;
}

/* Set a style for the submit/login button */
.form-container .btn {
    background-color: #4CAF50;
    color: white;
    padding: 16px 20px;
    border: none;
    cursor: pointer;
    width: 100%;
    margin-bottom: 10px;
    opacity: 0.8;
}

#submit-add-new-node, #submit-add-root-node {
    color: white;
}

#cancel-add-new-node {
    color: white;
    background-color: #dc3545;
}

#add-node-error-msg {
    color: #dc3545;
    font-size: 15px;
    margin-left: 4%;
}

/* Add some hover effects to buttons */
.form-container .btn:hover, .open-button:hover {
    opacity: 1;
}

.dropdown #mediaType {
    margin-top: 10px;
    margin-bottom: 10px;
    font-size: 15px;
    width: 50%;
    height: 30px;
}

.dropdown #mediaFormat {
    margin-top: 10px;
    margin-bottom: 10px;
    font-size: 15px;
    width: 50%;
    height: 30px;
}

#root-node-container {
    padding-top: 40px;
}
/* Root Node button */
#root-node-btn {
    margin-top: 20vh;
    text-align: center;
    cursor: pointer;
}

#root-node-label {
    text-align: center; 
    font-size: 1.5em;
    padding-top: 10px;
}

#root-node-btn:hover,
#root-node-btn:active {
    transform: scale(1.1);
    color: #11a6d8;
}

